--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <!-- Header -->
 <header>
-    <div class="container" style="position: relative;">
+    <div class="container">
         <div class="logo">
-            <img src="logo.png" alt="Enter Spain Logo">
+            <img src="logo.png" alt="Enter Spain Logo"> <!-- Replace with your logo -->
         </div>
         <nav>
             <ul id="nav-menu">
@@ -47,36 +47,18 @@
         <h2>Chat with Enter Spain AI</h2>
         <p>Ask me anything about moving to Spain — from documents to housing, banking, and healthcare. I’ll provide general info and connect you with our partners when you’re ready.</p>
 
-        <!-- Example Questions -->
-        <ul class="example-questions">
-            <li>What documents do I need for a residence permit in Spain?</li>
-            <li>How can I open a bank account as an expat?</li>
-            <li>Are there special visas for digital nomads?</li>
-            <li>How do I get healthcare access as a non-EU citizen?</li>
-            <li>Can you explain options for renting or buying housing?</li>
-        </ul>
+        <!-- Embedded Chatbase Iframe -->
+        <iframe
+                src="https://www.chatbase.co/chatbot-iframe/-vJaFq68V2voQ9sYyst01"
+                width="100%"
+                style="height: 100%; min-height: 700px; border-radius: 12px; overflow: hidden;"
+                frameborder="0"
+        ></iframe>
 
-        <!-- Chat Widget -->
-        <div id="chat-widget" class="chat-widget">
-            <div id="chat-messages" class="chat-messages">
-                <div class="chat-message ai">👋 Hola! I’m your Spain AI guide. What would you like to know?</div>
-            </div>
-
-            <!-- Typing Indicator -->
-            <div id="typing-indicator" class="typing-indicator hidden">
-                <span></span><span></span><span></span>
-            </div>
-
-            <div class="chat-input">
-                <input type="text" id="user-input" placeholder="Type your question...">
-                <button id="send-btn">Send</button>
-            </div>
-
-            <!-- Disclaimer -->
-            <p class="chat-disclaimer">
-                ⚠️ Our AI assistant provides general information only. For personalized legal or financial advice, consult a qualified expert.
-            </p>
-        </div>
+        <!-- Disclaimer -->
+        <p class="chat-disclaimer">
+            ⚠️ Our AI assistant provides general information only. For personalized legal or financial advice, consult a qualified expert.
+        </p>
     </div>
 </section>
 
@@ -85,8 +67,8 @@
     <div class="container">
         <h2>About Us</h2>
         <p>
-            At Enter Spain, our mission is simple: **make your move to Spain easy, stress-free, and personalized**.
-            With over <strong>1,500 clients served</strong> and representing more than <strong>30 nationalities</strong>, our experience speaks for itself.
+            At Enter Spain, our mission is simple: <strong>make your move to Spain easy, stress-free, and personalized</strong>.
+            With over <strong>1,500 clients served</strong> from more than <strong>30 nationalities</strong>, our experience speaks for itself.
         </p>
         <p>
             Founded by Ruben Oskam, our boutique team combines deep local knowledge with a proactive approach. Whether you're relocating for work, retirement, or investment, we handle everything—from immigration and banking to housing and healthcare—so you can focus on settling in, not paperwork.
@@ -104,6 +86,7 @@
 <footer>
     <div class="container">
         <p>&copy; 2025 Enter Spain. All rights reserved. <a href="/privacy">Privacy Policy</a></p>
+        <!-- Partner Logos -->
         <div class="partners">
             <img src="partner1.png" alt="Real Estate Partner">
             <img src="partner2.png" alt="Insurance Partner">
@@ -113,6 +96,7 @@
     </div>
 </footer>
 
+<!-- JS -->
 <script src="main.js"></script>
 </body>
 </html>
