Applied patch: mobile tweaks, chat embed, nav fix

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enter Spain - AI Immigration Assistant</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Enter Spain – AI Immigration Assistant</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,20 +11,15 @@
 <!-- Header -->
 <header>
     <div class="container">
-        <div class="logo">
-            <img src="logo.png" alt="Enter Spain Logo"> <!-- Replace with your logo -->
-        </div>
+        <div class="logo"><img src="logo.png" alt="Enter Spain Logo"></div>
         <nav>
             <ul id="nav-menu">
                 <li><a href="#chat">Chat</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="https://rubenoskam.com/" target="_blank">Main Site</a></li>
+                <li><a href="https://rubenoskam.com/" target="_blank" rel="noopener">Main Site</a></li>
             </ul>
-            <!-- Hamburger Button -->
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="hamburger" id="hamburger" aria-label="Toggle navigation">
+                <span></span><span></span><span></span>
             </div>
         </nav>
     </div>
@@ -34,8 +29,8 @@
 <section id="home" class="hero">
     <div class="container">
         <h1>Welcome to Enter Spain</h1>
-        <p>Your AI-powered assistant for moving to Spain. Ask about visas, banking, housing, healthcare, and more. We’ll connect you to our trusted partners when you’re ready.</p>
-        <button class="cta-button" onclick="document.querySelector('#chat').scrollIntoView({behavior: 'smooth'})">
+        <p>Your AI-powered assistant for moving to Spain. Ask about visas, banking, housing, healthcare, and more. We’ll connect you to our trusted partners when you're ready.</p>
+        <button class="cta-button" onclick="document.querySelector('#chat').scrollIntoView({ behavior: 'smooth' })">
             Start Chatting with AI
         </button>
     </div>
@@ -45,20 +40,17 @@
 <section id="chat" class="chat-section">
     <div class="container">
         <h2>Chat with Enter Spain AI</h2>
-        <p>Ask me anything about moving to Spain — from documents to housing, banking, and healthcare. I’ll provide general info and connect you with our partners when you’re ready.</p>
-
-        <!-- Embedded Chatbase Iframe -->
+        <p>Ask me anything about moving to Spain—from documents to housing, banking, and healthcare. I’ll provide general info and connect you with our partners when you’re ready.</p>
         <iframe
                 src="https://www.chatbase.co/chatbot-iframe/-vJaFq68V2voQ9sYyst01"
                 width="100%"
-                style="height: 100%; min-height: 700px; border-radius: 12px; overflow: hidden;"
+                height="auto"
+                loading="lazy"
+                class="chat-iframe"
+                style="min-height: 600px;"
                 frameborder="0"
+                aria-label="Enter Spain AI chat"
         ></iframe>
-
-        <!-- Disclaimer -->
-        <p class="chat-disclaimer">
-            ⚠️ Our AI assistant provides general information only. For personalized legal or financial advice, consult a qualified expert.
-        </p>
     </div>
 </section>
 
@@ -66,17 +58,10 @@
 <section id="about" class="about">
     <div class="container">
         <h2>About Us</h2>
-        <p>
-            At Enter Spain, our mission is simple: <strong>make your move to Spain easy, stress-free, and personalized</strong>.
-            With over <strong>1,500 clients served</strong> from more than <strong>30 nationalities</strong>, our experience speaks for itself.
-        </p>
-        <p>
-            Founded by Ruben Oskam, our boutique team combines deep local knowledge with a proactive approach. Whether you're relocating for work, retirement, or investment, we handle everything—from immigration and banking to housing and healthcare—so you can focus on settling in, not paperwork.
-        </p>
-        <p>
-            We connect you with trusted partners in real estate, insurance, banking, and accounting, crafting tailored solutions that align with your personal needs and ensure smooth transitions.
-        </p>
-        <button class="about-cta" onclick="document.querySelector('#chat').scrollIntoView({behavior: 'smooth'})">
+        <p>At Enter Spain, our mission is simple: <strong>make your move to Spain easy, stress-free, and personalized</strong>. With over <strong>1,500 clients served</strong> from more than <strong>30 nationalities</strong>, our experience speaks for itself.</p>
+        <p>Founded by Ruben Oskam, our boutique team combines deep local knowledge with a proactive approach. Whether you’re relocating for work, retirement, or investment, we handle everything—from immigration and banking to housing and healthcare—so you can focus on settling in, not paperwork.</p>
+        <p>We connect you with trusted partners in real estate, insurance, banking, and accounting, crafting tailored solutions that align with your personal needs and ensure smooth transitions.</p>
+        <button class="about-cta" onclick="document.querySelector('#chat').scrollIntoView({ behavior: 'smooth' })">
             Start Your Journey
         </button>
     </div>
@@ -86,7 +71,6 @@
 <footer>
     <div class="container">
         <p>&copy; 2025 Enter Spain. All rights reserved. <a href="/privacy">Privacy Policy</a></p>
-        <!-- Partner Logos -->
         <div class="partners">
             <img src="partner1.png" alt="Real Estate Partner">
             <img src="partner2.png" alt="Insurance Partner">
